syntax = "proto3";
package pb;

option go_package = "./pb;pb";

enum Grp {
  Def = 0;
  Sys = 1;
  Logic = 2;
}

enum Cmd_sys {
  Def_Cmd_Sys = 0;
  Subscribe_Online_User = 1;
  Kick_Online_User = 2;
  Push_Message = 3;
}

enum Cmd_Logic {
  Def_Cmd_Logic = 0;
  Health = 1;
}